--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "electoral-application",
+  "homepage":"https://upasana1807.github.io/Electoral-Application/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
